# leptos_osuapi_playground

./: .denoignore  Cargo.toml  README.md  README_EN.md  index.html  tailwind.config.js
.github/workflows/: deploy.yml
locales/de-DE/: main.ftl
locales/en/: main.ftl
locales/fr-FR/: main.ftl
locales/ja-JP/: main.ftl
locales/ko-KR/: main.ftl
locales/ru-RU/: main.ftl
locales/zh-CN/: main.ftl
src/: app.rs  i18n.rs  input.css  lib.rs  main.rs
src/components/: api_demo.rs  api_demo_d.rs  api_demo_o.rs  api_docs_button.rs  api_section copy.rs  api_section.rs  api_v1_demo.rs  api_v2_demo.rs  example.vue  features_section.rs  hero_section.rs  mod.rs  oauth_panel.rs  theme_toggle.rs  usage_section.rs
src/components/buttons/: api_demo_button.rs  api_docs_button.rs  mod.rs  osuapi_docs_button.rs
src/components/demo/: beatmap_demo.rs  mod.rs  scores_demo.rs  user_best_demo.rs  user_demo.rs  user_recent_demo.rs
src/components/demo/v1/: beatmap_demo.rs  mod.rs  scores_demo.rs  user_best_demo.rs  user_demo.rs  user_recent_demo.rs
src/components/demo/v2/: me_demo.rs  mod.rs  user_demo.rs
src/layouts/: footer.rs  header.rs
src/stores/: mod.rs  settings_store.rs
