[package]
name = "leptos_osuapi_playground"
version = "0.1.0"
edition = "2024"
authors = ["Hako Chest <zoneherobrine@gmail.com>"]
rust-version = "1.85.0"
description = "High performance, well-structured, extensible Rust osu! API client. Supports both WASM and native environments."
keywords = ["osynic", "osu", "osu!api", "wasm"]
categories = ["games", "api-bindings"]
license = "MIT"
documentation = "https://osynic-osuapi.deno.dev"
repository = "https://github.com/osynicite/leptos_osuapi_playground"


[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
leptos_router = "0.8.2"
reactive_stores = "0.2.2"
reactive_stores_macro = "0.2.2"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
web-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
console_log = { version = "1", features = ["color"] }
log = "0.4.27"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos-use = "0.15.7"
uuid = { version = "1.16.0", features = ["v4","js"] }
lucide-leptos = "1.2.0"

leptos-fluent = "0.2"
fluent-templates = "0.13"

osynic_osuapi = { version="0.1.0",default-features = false,features = ["v1","wasm"] }