[package]
name = "leptos_osuapi_playground"
version = "0.1.0"
edition = "2024"
authors = ["Hako Chest <zoneherobrine@gmail.com>"]
rust-version = "1.85.0"
description = "High performance, well-structured, extensible Rust osu! API client. Supports both WASM and native environments."
keywords = ["osynic", "osu", "osu!api", "wasm"]
categories = ["games", "api-bindings"]
license = "MIT"
homepage = "https://osynic-osuapi.deno.dev"
documentation = "https://osynic-osuapi.deno.dev"
repository = "https://github.com/osynicite/leptos_osuapi_playground"


[dependencies]
leptos = { version = "0.8.3", features = ["csr"] }
leptos_router = "0.8.3"
reactive_stores = "0.2.3"
reactive_stores_macro = "0.2.3"
wasm-bindgen = "0.2.117"
wasm-bindgen-futures = "0.4.67"
js-sys = "0.3.94"
web-sys = "0.3.94"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
console_log = { version = "1", features = ["color"] }
log = "0.4.29"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
leptos-use = "0.18.3"
uuid = { version = "1.23.0", features = ["v4","js"] }
lucide-leptos = { version = "2.577.0", features = ["accessibility","account","arrows","buildings","charts","communication","connectivity","design","development","files","gaming","navigation","security","social","time","transportation","text"] }

# leptos-fluent = "0.2.19"
leptos-fluent = { git = "https://github.com/mondeja/leptos-fluent", branch = "master" }
fluent-templates = "0.13.3"

osynic_osuapi = { version="0.1.9",default-features = false,features = ["v1","v2","wasm"] }
